--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.22.2",
     "mongodb-memory-server": "^3.0.0",
     "mongoose": "^5.3.8",
