--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "cuid": "^2.1.4",
     "debug": "^2.6.9",
     "dotenv": "^6.1.0",
@@ -44,6 +45,7 @@
     "multer": "^1.4.1",
     "node-mocks-http": "^1.7.3",
     "randomstring": "^1.1.5",
+    "rmf": "^2.0.0",
     "serve-favicon": "^2.5.0",
     "tinyurl": "^1.1.2"
   },
