--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.15.0",
     "http-errors": "~1.6.2",
+    "ics": "^2.15.1",
     "jsonexport": "^2.4.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
