--- a/env.SAMPLE
+++ b/env.SAMPLE
@@ -1,11 +1,19 @@
 NODE_ENV="development"
 SITE_URL="http://localhost:3000"
 SECRET=""
-MONGODB_CONNECTION_STRING="mongodb://localhost:27017/skeleton"
+MONGODB_CONNECTION_STRING="mongodb://localhost:27017/recruitech"
 REDIS_CONNECTION_STRING=""
 SMTP_HOST=""
 SMTP_PORT=""
 SMTP_FROM_ADDRESS=""
 SMTP_AUTH_USER=""
 SMTP_AUTH_PASSWORD=""
-
+WIDGET_CUSTOM_ELEMENT="recruitech-openings-widget"
+WIDGET_SRC_URL="http://localhost:8080"
+MAILGUN_API_KEY=""
+MAILGUN_DOMAIN=""
+MAILGUN_EMAIL_FROM=""
+PUSHER_APP_ID=""
+PUSHER_KEY=""
+PUSHER_SECRET=""
+PUSHER_CLUSTER=""
