--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-mocks-http": "^1.7.3",
+    "pusher": "^2.2.1",
     "randomstring": "^1.1.5",
     "rmf": "^2.0.0",
     "serve-favicon": "^2.5.0",
